# perch-hoplite

./: README.md  generate_requirements.sh  pyproject.toml  requirements-jax.txt  requirements.txt
.github/workflows/: ci_pip.yml  ci_poetry.yml  ci_poetry_with_jax.yml  publish.yml
hoplite/agile/: classifier.py
perch_hoplite/: audio_io.py  path_utils.py
perch_hoplite/agile/: 01_embed_audio.ipynb  02_agile_modeling.ipynb  03_call_density.ipynb  1_embed_audio_v2.ipynb  99_migrate_db.ipynb  README.md  audio_loader.py  call_density.py  call_density_beta.py  classifier.py  classifier_data.py  colab_utils.py  convert_legacy.py  embed.py  embedding_display.py  ingest_annotations.py  metadata.py  metrics.py  source_info.py
perch_hoplite/agile/migrations/: audio_dataset_converter.py  convert_legacy.py  dataset_scripts.py
perch_hoplite/agile/tests/: call_density_test.py  classifier_data_test.py  classifier_test.py  convert_legacy_test.py  embed_test.py  embedding_display_test.py  ingest_annotations_test.py  metadata_test.py  metrics_test.py  source_info_test.py  test_utils.py
perch_hoplite/db/: README.md  brutalism.py  datatypes.py  db_loader.py  filter_utils.py  in_mem_impl.py  interface.py  iterators.py  multi_db_impl.py  parquet_impl.py  score_functions.py  search_results.py  sqlite_usearch_impl.py
perch_hoplite/db/tests/: brutalism_test.py  datatypes_test.py  hoplite_test.py  interface_test.py  multi_db_impl_test.py  search_test.py  test_utils.py
perch_hoplite/taxonomy/: README.md  annotations.py  annotations_fns.py  class_utils.py  ebird.py  namespace.py  namespace_db.py  namespace_db_test.py
perch_hoplite/zoo/: README.md  aves_model.py  handcrafted_features_model.py  hf_hub.py  hub.py  kaggle_hub.py  model_configs.py  models_onnx.py  models_tf.py  placeholder_model.py  taxonomy_model_tf.py  zoo_interface.py  zoo_test.py
(+1 files in other folders)
