[tool.poetry]
name = "perch-hoplite"
version = "0.1.0"
description = "Tooling for agile modeling on large machine perception embedding databases."
authors = ["Perch Team <chirp-bio@google.com>"]
license = "Apache 2.0"

[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "perch-hoplite"
description = "Tooling for agile modeling on large machine perception embedding databases."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "tom denton", email="tomdenton@google.com"},
    {name = "Vincent Dumoulin", email="vdumoulin@google.com"},
    {name = "Jeninka Hamer", email="hamer@google.com"},
    {name = "Bart van Merriënboer", email="bartvm@google.com"},
    {name = "Frank Zhang", email="zhangfrank@google.com"},
]
dependencies = [
    "absl-py (>=1.4.0,<1.5.0)",
    "etils[epath] (>=1.5.0,<1.6.0)",
    "imageio (>=2.5.0,<2.6.0)",
    "ipywidgets (>=8.1,<9)",
    "jax[flax] (>=0.4.16,<0.5)",
    "librosa (>=0.10.1,<0.11.0)",
    "matplotlib (>=3.6.1,<3.7.0)",
    "ml-collections (>=1.0.0,<2.0.0)",
    "notebook (>=7.0.4,<7.1.0)",
    "numpy (>=1.24.0)",
    "pandas[gcp] (>=2.1.1,<3.0.0)",
    "usearch (>=2.16,<2.18)",
]

[project.optional-dependencies]
tf = ["tensorflow>=2.16,<2.17", "tensorflow-hub>=0.16,<0.17"]
jax = ["flax>=0.8.1,<0.9", "jax>=0.4.16,<0.5"]

[tool.poetry.group.tf]
optional = false

[tool.poetry.group.tf.dependencies]
tensorflow = "^2.16"
tensorflow-hub = "^0.16.0"

[tool.poetry.group.jax]
optional = true

[tool.poetry.group.jax.dependencies]
flax = "^0.8.1"
jax = "^0.4.16"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
